[package]
name = "breeze"
version = "0.1.0"
authors = ["Sergey Golovin <golovim@gmail.com>"]
edition = "2018"
description = "An experimental tool for wrapping rust binaries into NPM packages"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
